# bq-sql-antipattern-checker

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Makefile  README.md  antipatterns.py  classes.py  config.py  functions.py  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
src/bq_sql_antipattern_checker/: __init__.py  __version__.py  antipattern-config.yaml  antipatterns.py  classes.py  config.py  functions.py  main.py
src/bq_sql_antipattern_checker/templates/: columns_query.sql.j2  information_schema_query.sql.j2  jobs_query.sql.j2  jobs_query_raw.sql.j2  metadata_column_info.sql.j2  metadata_row_count.sql.j2  results_table_ddl.sql.j2
templates/: columns_query.sql.j2  jobs_query.sql.j2  results_table_ddl.sql.j2
tests/: conftest.py  test_antipatterns.py  test_config.py  test_render.py
